[package]
name        = "inc"
version     = "0.1.1"
authors     = ["Jaseem Abid <jaseemabid@gmail.com>"]
edition     = "2018"
license     = "MIT"
description = "Incremental approach to compiler construction"
repository  = "https://github.com/jaseemabid/inc"
categories  = []
keywords    = ["compiler", "x86", "scheme"]

[dependencies]
nom = "^5.0"
quickcheck = "0.8"
quickcheck_macros = "0.8"
uuid = { version = "0.7", features = ["serde", "v4"] }
